lab1/Test/L1-A-1-2.cmm
float N5qH_yBilJ9yw7KFP5 [ 922670303 ] , Q8mlUylGJ7ENF_ 
  [ 2048789934 ] / [ 360517998 ] 

;
= != 